--- a/2025_12_theory_paper/00_cep_semantics.tex
+++ b/2025_12_theory_paper/00_cep_semantics.tex
@@ -1,3 +1,4 @@
+\PassOptionsToPackage{colorlinks=true,linkcolor=blue,citecolor=blue,urlcolor=blue}{hyperref}
 \documentclass[11pt]{article}
 
 % Encoding, fonts, spacing
@@ -13,6 +14,7 @@
 % Math, symbols, tables, graphics
 \usepackage{amsmath, amssymb}
 \usepackage{booktabs}
+\usepackage{bookmark}
 \usepackage{graphicx}
 
 \usepackage{amsthm}
@@ -22,12 +24,7 @@
 
 % URLs, hyperlinks, bibliography
 \usepackage{url}
-\usepackage[
-  colorlinks=true,
-  linkcolor=blue,
-  citecolor=blue,
-  urlcolor=blue
-]{hyperref}
+\usepackage{hyperref}
 \usepackage{natbib}
 
 % Authors and affiliations
@@ -38,6 +35,7 @@
 
 % TikZ for diagrams
 \usepackage{tikz}
+\usepackage{tikz-cd}
 \usetikzlibrary{arrows.meta,calc,fit,positioning,shapes.geometric}
 
 % Framed callouts
@@ -46,6 +44,10 @@
 
 % Simple keywords helper
 \providecommand{\keywords}[1]{\textbf{Keywords: } #1}
+
+% Canonicalization macro helpers
+\newcommand{\Raw}{\mathsf{Raw}}
+\newcommand{\Canon}{\mathsf{Canon}}
 
 % Figure callout box
 \newcommand{\FigureCallout}[2]{%
@@ -72,51 +74,62 @@
 \usepackage{enumitem}
 \setlist[itemize]{itemsep=0.2em, topsep=0.2em, parsep=0em, partopsep=0em}
 
+% Define missing commands
+\providecommand{\Raw}{\mathrm{Raw}}
+\providecommand{\Canon}{\mathrm{Canon}}
 
 \title{Categorical Semantics for the Civic Exchange Protocol (CEP)}
 
 \author[1,2]{Denise Case}
-
 \affil[1]{Northwest Missouri State University, Computer Science and Information Systems, Maryville, MO, USA}
 \affil[2]{Civic Interconnect, Ely, MN, USA}
 
 \date{\today}
 
 \begin{document}
+
 \maketitle
 \vspace{-1em}
 
 \begin{tcolorbox}[colback=gray!10, colframe=black!20, boxrule=0.3pt]
-  \textbf{Preprint Notice.}
-  This preprint has not undergone peer review.
-  It is shared to support community discussion, transparency research, and early technical evaluation.
+    \textbf{Preprint Notice.}
+    This preprint has not undergone peer review.
+    It is shared to support community discussion, transparency research, and early technical evaluation.
 \end{tcolorbox}
 
 \begin{abstract}
 The Civic Exchange Protocol (CEP) defines entities, relationships, exchanges,
-and context tags as the core primitives of civic information systems.
-This paper develops a categorical semantics for CEP, providing a mathematical
-foundation for its compositional structure, identity guarantees, and interoperability claims.
-We model CEP records as typed objects in a finitely complete category, with morphisms representing provenance-preserving
-transformations.
-Envelopes, attestations, and context tags are formalized as natural transformations
+and context tags as foundational primitives for civic information systems.
+This paper develops a categorical semantics for CEP, providing a rigorous
+mathematical basis for its compositional structure, identity guarantees,
+and interoperability claims.
+CEP records are modeled as typed objects in a finitely complete category,
+with morphisms representing provenance-preserving transformations.
+Envelopes, attestations, and context tags arise as natural transformations
 between functors encoding system-level views of the data.
-We show that canonicalization corresponds to a monoidal functor that preserves
-identity and equivalence classes, and that jurisdictional adapters arise as
+Canonicalization is formulated as a strict monoidal functor that preserves
+identity and equivalence classes, while jurisdictional adapters appear as
 oplax functors mediating between local schemas and global vocabularies.
-This categorical semantics clarifies CEP's invariants, sketches correctness
-properties for its identifier construction (SNFEI), and establishes a basis for
-future extensions in data fusion, federation, and cross-jurisdiction interoperability.
+Together, these constructions clarify CEP's invariants, formalize correctness
+properties of its identifier mechanism (SNFEI),
+and establish a robust foundation for future work in verification,
+data fusion, and cross-jurisdiction interoperability.
+
 \end{abstract}
 
 \begin{keywords}
-Civic data; category theory; functorial data modeling; interoperability;
-canonicalization; identifiers; provenance.
+    Civic data;
+    category theory;
+    functorial data modeling;
+    interoperability;
+    canonicalization;
+    identifiers;
+    provenance.
 \end{keywords}
 
 \input{01_intro}
 \input{02_preliminaries}
-\input{03_civic}
+\input{03_cep}
 \input{04_nt}
 \input{05_canonicalization}
 \input{06_adapters}
@@ -126,21 +139,16 @@ canonicalization; identifiers; provenance.
 \input{70_limitations}
 \input{90_conclusion}
 
-
-% ------------------------------------------------------------
-% Appendices
-% ------------------------------------------------------------
 \appendix
 \clearpage
 
 \input{99_appendixA}   % Category background
 \input{99_appendixB}   % Worked examples
 \input{99_appendixC}   % Proof sketches
-\input{99_appendixD}   % Diagrams
-\input{99_appendixE}   % Non-expert
-
+\input{99_appendixD}   % Diagrammatic intuition
+\input{99_appendixE}   % Glossary of categorical notions
 
 \bibliographystyle{plainnat}
-\bibliography{00_bib}  %  .bib file name
+\bibliography{00_cep}  %  .bib file name
 
 \end{document}
