--- a/2025_12_theory_paper/08_results.tex
+++ b/2025_12_theory_paper/08_results.tex
@@ -1,113 +1,120 @@
-% ============================================================
+% !TeX root = 00_cep_semantics.tex
+
 \section{Interoperability Results}
 \label{sec:results}
-% ============================================================
 
-The categorical semantics developed in the preceding sections yields
-formal guarantees for CEP's central interoperability claims. These
-results follow from functoriality, naturality, monoidal structure, and
-the oplax semantics of adapters.
+The categorical semantics developed in the preceding sections yield
+formal guarantees for CEP's core interoperability claims.
+These results follow from functoriality, naturality, monoidal structure, and the oplax
+semantics of jurisdictional adapters.
 
 % ------------------------------------------------------------
 \subsection{Functorial Consistency}
 % ------------------------------------------------------------
 
-We first show that the interaction between record evolution and
-attestation is coherent under composition.
+We first establish coherence between record evolution and attestation.
 
 \begin{lemma}[Functorial Consistency of Attested Evolutions]
-\label{lemma:functorial-consistency}
-Let $f : R \to R'$ and $g : R' \to R''$ be morphisms in
-$\mathbf{CEP}$, and let $\alpha : \mathcal{E} \Rightarrow \mathcal{E}'$
-be the natural transformation representing attestation.
-Then the following diagram commutes:
-\[
-\mathcal{E}'(g \circ f)
-  \;=\;
-\alpha_{R''} \circ \mathcal{E}(g \circ f)
-  \;=\;
-\mathcal{E}'(g) \circ \mathcal{E}'(f).
-\]
+  \label{lemma:functorial-consistency}
+  Let $f : R \to R'$ and $g : R' \to R''$ be morphisms in
+  $\mathbf{CEP}$, and let $\alpha : \mathcal{E} \Rightarrow \mathcal{E}'$
+  be the natural transformation representing attestation.
+  Then:
+  \[
+    \mathcal{E}'(g \circ f)
+    \;=\;
+    \alpha_{R''} \circ \mathcal{E}(g \circ f)
+    \;=\;
+    \mathcal{E}'(g) \circ \mathcal{E}'(f).
+  \]
 \end{lemma}
 
 \begin{proof}
-By naturality of $\alpha$, each attestation map satisfies
-$\alpha_{R'} \circ \mathcal{E}(f) = \mathcal{E}'(f) \circ \alpha_{R}$.
-Associativity of morphism composition in $\mathbf{CEP}$ gives the result.
+  Naturality of $\alpha$ gives
+  \(
+  \alpha_{R'} \circ \mathcal{E}(f)
+  =
+  \mathcal{E}'(f) \circ \alpha_R
+  \)
+  for all $f : R \to R'$.
+  Composing these constraints and using associativity
+  of morphisms in $\mathbf{CEP}$ yields the claim.
 \end{proof}
 
-This establishes that CEP's update–attestation workflow is
-compositionally well-behaved, enabling reliable audit chains and
-provable immutability of provenance.
+This shows that CEP's update--attestation workflow behaves coherently
+under composition, supporting reliable audit chains and immutability of
+provenance traces.
 
 % ------------------------------------------------------------
 \subsection{Identifier Preservation}
 % ------------------------------------------------------------
 
-We now formalize the guarantee that canonical identifiers remain stable
-under all valid record evolutions.
+We now formalize the stability of canonical identifiers under all valid
+record evolutions.
 
 \begin{theorem}[Identifier Preservation]
-\label{thm:identifier-preservation}
-Let $f : R \to R'$ be any morphism in $\mathbf{CEP}$.
-Let $\mathcal{C}$ denote the canonicalization functor and $H$ the
-deterministic hash used to compute the SNFEI.
-Then:
-\[
-H(\mathcal{C}(R)) \;=\; H(\mathcal{C}(R')).
-\]
+  \label{thm:identifier-preservation}
+  Let $f : R \to R'$ be any morphism in $\mathbf{CEP}$.
+  Let $\mathcal{C}$
+  denote the canonicalization functor and
+  $H$ the deterministic hash usedto compute the SNFEI.
+  Then:
+  \[
+    H(\mathcal{C}(R)) \;=\; H(\mathcal{C}(R')).
+  \]
 \end{theorem}
 
 \begin{proof}
-By definition of a valid $\mathbf{CEP}$ morphism, $f$ preserves the
-canonical components of the record. By the strict monoidality of
-$\mathcal{C}$, we have $\mathcal{C}(R) = \mathcal{C}(R')$. Since $H$ is
-a pure function, the SNFEI values coincide.
+  A valid $\mathbf{CEP}$ morphism $f$ preserves all canonical components
+  of the record.
+  Strict monoidality of $\mathcal{C}$ therefore implies
+  $\mathcal{C}(R)=\mathcal{C}(R')$.
+  Since $H$ is a pure function, the
+  resulting SNFEI values coincide.
 \end{proof}
 
-This result provides the mathematical foundation for CEP's claim of
-\emph{identity stability across revisions}, ensuring that record
-evolution does not alter canonical identity.
+This theorem provides the mathematical foundation for CEP's claim of
+\emph{identity stability across revisions}.
 
 % ------------------------------------------------------------
 \subsection{Cross-Jurisdiction Reconciliation}
 % ------------------------------------------------------------
 
-Jurisdictional adapters mediate between heterogeneous local structures
-and the global CEP vocabulary. We show that their oplax semantics
-preserves canonical equivalence classes.
+Jurisdictional adapters reconcile heterogeneous local schemas with the
+global CEP vocabulary.
+We show that their oplax semantics preserves canonical identity across compositions.
 
 \begin{theorem}[Canonical Equivalence Preservation Under Adapters]
-\label{thm:adapter-preservation}
-Let $\mathcal{A}_1, \mathcal{A}_2$ be valid jurisdictional adapters
-(as defined in Section~\ref{sec:adapters}).  
-If two local records $R$ and $R'$ satisfy
-\[
-H(\mathcal{C}(\mathcal{A}_1(R)))
-  \;=\;
-H(\mathcal{C}(\mathcal{A}_1(R'))),
-\]
-then after composition with a second adapter,
-\[
-H(\mathcal{C}(\mathcal{A}_2(\mathcal{A}_1(R))))
-  \;=\;
-H(\mathcal{C}(\mathcal{A}_2(\mathcal{A}_1(R')))).
-\]
+  \label{thm:adapter-preservation}
+  Let $\mathcal{A}_1$ and $\mathcal{A}_2$ be valid jurisdictional
+  adapters (Section~\ref{sec:adapters}).
+  If two local records $R$ and $R'$ satisfy
+  \[
+    H(\mathcal{C}(\mathcal{A}_1(R)))
+    \;=\;
+    H(\mathcal{C}(\mathcal{A}_1(R'))),
+  \]
+  then after composition with a second adapter,
+  \[
+    H(\mathcal{C}(\mathcal{A}_2(\mathcal{A}_1(R))))
+    \;=\;
+    H(\mathcal{C}(\mathcal{A}_2(\mathcal{A}_1(R')))).
+  \]
 \end{theorem}
 
 \begin{proof}
-Each adapter $\mathcal{A}_i$ is oplax, meaning it may weaken local
-structure but cannot introduce new canonical content (Section~6.3).
-Thus $\mathcal{C}(\mathcal{A}_i(R))$ is defined and stable. The strict
-monoidality of $\mathcal{C}$ ensures that canonical strings are preserved
-under composition of such structure-weakening functors. Applying $H$
-yields the claimed equality.
+  A valid adapter is oplax: it may weaken structure but cannot introduce
+  new canonical content.
+  Thus each $\mathcal{C}(\mathcal{A}_i(R))$ is defined and
+  invariant under further valid transformations.
+  Strict monoidality of $\mathcal{C}$ ensures that canonical strings are
+  preserved under composition of such structure-weakening functors.
+  Applying $H$ yields the result.
 \end{proof}
 
 \noindent
-This theorem establishes that cross-jurisdiction data pipelines cannot
-violate CEP's canonical identity invariants, provided the adapters
-conform to the correctness criteria of Section~\ref{sec:adapters}.  
-It provides the formal backbone for CEP's claim of
+This theorem shows that multi-stage, cross-jurisdiction pipelines respect
+CEP's canonical identity invariants.
+It provides the formal backbone for
 \emph{globally consistent, locally autonomous interoperability}.
 
